# sovereign

./: .gitignore  Cargo.toml
assets/shaders/: mesh.hlsl
sovereign/: Cargo.toml
sovereign/src/: main.rs
sovereign_ecs/: Cargo.toml
sovereign_ecs/src/: lib.rs
sovereign_gltf/: Cargo.toml
sovereign_gltf/src/: lib.rs
sovereign_render/: Cargo.toml
sovereign_render/src/: asset.rs  camera.rs  command_encoder.rs  descriptor.rs  device.rs  id.rs  lib.rs  material.rs  mesh.rs  queue.rs  transform.rs
