[package]
name = "sovereign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sovereign_render = { path = "../sovereign_render" }
tracing-subscriber = "0.3"
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }